@@ -37,8 +37,8 @@ apply plugin: 'checkstyle'
 apply plugin: 'project-report'
 apply plugin: 'info.solidsoft.pitest'
 
-sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 checkstyle {
     toolVersion "8.8"
@@ -250,3 +250,12 @@ classes.dependsOn(licenseFormat)
 
 bootJar.dependsOn unzip
 jar.enabled = true
+
+def jdk17CompatArgs = ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED', '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED', '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED', '--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED', '--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED', '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED', '--add-opens=java.base/java.nio=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED', '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+allprojects.forEach(p -> {
+    p.tasks.forEach(task -> {
+        if (task.metaClass.respondsTo(task, 'jvmArgs', Iterable<String>)) {
+            task.jvmArgs(jdk17CompatArgs)
+        }
+    })
+})
